# database-ontology-mcp

./: .env.template  .gitignore  .mcp_db_connection.json  CLAUDE.md  CLAUDE_INTEGRATION.md  CONTRIBUTING.md  ENRICHED_CONTEXT_USAGE.md  LICENSE  MCP_ENRICHMENT_WORKFLOW.md  README.md  SECURITY.md  pyproject.toml  requirements.txt  run_server.py  server.py  test_diagnostic.py
config/: .env.template
src/: __init__.py  chart_utils.py  config.py  connection_cache.py  constants.py  database_manager.py  dremio_client.py  error_handling.py  main.py  main_original.py  obqc_validator.py  ontology_generator.py  security.py  shared.py  utils.py
src/tools/: __init__.py  chart.py  connection.py  info.py  ontology.py  query.py  schema.py  semantic.py
tests/: test_database_manager.py  test_ontology_generator.py  test_ontology_quality.py  test_security.py  test_server.py
